fix line-height so descenders don't get cut off

--- a/src/attachments/link-preview/types/Styles.css
+++ b/src/attachments/link-preview/types/Styles.css
@@ -53,7 +53,7 @@
 
 		& .title {
 			font-size: 1rem;
-			line-height: 1.3;
+			line-height: 1.35;
 			font-weight: 600;
 		}
 
@@ -64,7 +64,7 @@
 		& .description {
 			margin-top: 0.5rem;
 			font-size: 0.875rem;
-			line-height: 1.3;
+			line-height: 1.35;
 		}
 	}
 }
